--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_install:
 
 script:
   - docker run agamblin/eh-client-test yarn launch-tests-ci --coverage
-  - docker run -e SQL_HOST=$SQLHOST -e SQL_PORT=3306 -e SQL_USER=root -e SQL_PASSWORD=$SQLPWD -e SQL_DB=eh_test -e JWT_SECRET=somejwtrandom agamblin/eh-server-test yarn launch-tests --coverage
+  - docker run -e SQL_HOST=$SQLHOST -e SQL_PORT=3306 -e SQL_USER=root -e SQL_PASSWORD=$SQLPWD -e SQL_DB=eh_test -e JWT_SECRET=somejwtrandom -e NODE_ENV=CI agamblin/eh-server-test yarn launch-tests --coverage
 # after_success:
 #   - docker build -t agamblin/eh-client ./client
 #   - docker build -t agamblin/eh-server ./server
