--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,9 @@ before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
   - test $TRAVIS_BRANCH = "master" && git submodule foreach --recursive git checkout master
+    if: branch = master 
   - test $TRAVIS_BRANCH = "develop" && git submodule foreach --recursive git checkout develop
+    if: branch = develop
   - docker build -t agamblin/eh-client-test -f ./client/Dockerfile.dev ./client
   - docker build -t agamblin/eh-server-test -f ./server/Dockerfile.dev ./server
 
