--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ git:
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
 
 before_install:
-  # - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
   - git submodule foreach --recursive git checkout develop
   - docker build -t agamblin/eh-client-test -f ./client/Dockerfile.dev ./client
