--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ services:
 
 # Handle git submodules yourself
 git:
-  submodules: false
+  submodules: true
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
 
 before_install:
-  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
-  - git submodule update --init --recursive
+  # - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  # - git submodule update --init --recursive
   - git submodule foreach --recursive git checkout develop
   - docker build -t agamblin/eh-client-test -f ./client/Dockerfile.dev ./client
   - docker build -t agamblin/eh-server-test -f ./server/Dockerfile.dev ./server
