--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ git:
 # Use sed to replace the SSH URL with the public URL, then initialize submodules
 
 before_install:
+  - echo -e "machine github.com\n  login agamblin\n  password $GITHUB_PASSWORD" > ~/.netrc
   # - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   # - git submodule update --init --recursive
   - git submodule foreach --recursive git checkout develop
