DEPLOYMENT 2ND SPRINT

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: required
 
 services:
   - docker
+  - mysql
 
 # Handle git submodules yourself
 git:
@@ -14,10 +15,11 @@ before_install:
   - git submodule foreach --recursive git checkout $BRANCH
   - docker build -t agamblin/eh-client-test -f ./client/Dockerfile.dev ./client
   - docker build -t agamblin/eh-server-test -f ./server/Dockerfile.dev ./server
+  - mysql -e 'CREATE DATABASE eh_testing;'
 
 script:
   - docker run agamblin/eh-client-test yarn launch-tests-ci --coverage
-  - docker run -e SQL_HOST=$SQLHOST -e SQL_PORT=3306 -e SQL_USER=root -e SQL_PASSWORD=$SQLPWD -e SQL_DB=eh_testing -e JWT_SECRET=somejwtrandom -e NODE_ENV=CI agamblin/eh-server-test yarn launch-tests --coverage
+  - docker run --net=host  -e SQL_HOST=127.0.0.1 -e SQL_PORT=3306 -e SQL_USER=root -e SQL_PASSWORD='' -e SQL_DB=eh_testing -e NODE_ENV=CI -e JWT_SECRET=somejwtrandom agamblin/eh-server-test yarn launch-tests --coverage
 after_success:
   - docker build -t agamblin/eh-client ./client
   - docker build -t agamblin/eh-server ./server
