DEPLOYMENT STAGING 3RD SPRINT

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 
 script:
   - docker run agamblin/eh-client-test yarn launch-tests-ci --coverage
-  - docker run --net=host  -e SQL_HOST=127.0.0.1 -e SQL_PORT=3306 -e SQL_USER=root -e SQL_PASSWORD='' -e SQL_DB=eh_testing -e NODE_ENV=CI -e JWT_SECRET=somejwtrandom agamblin/eh-server-test yarn launch-tests --coverage
+  - docker run --net=host -e AWS_ACCESS_KEY=$S3_AWS_ACCESS_KEY -e AWS_SECRET_KEY=$S3_AWS_SECRET_KEY -e AWS_BUCKET_NAME=$S3_AWS_BUCKET_NAME -e SQL_HOST=127.0.0.1 -e SQL_PORT=3306 -e SQL_USER=root -e SQL_PASSWORD='' -e SQL_DB=eh_testing -e NODE_ENV=CI -e JWT_SECRET=somejwtrandom agamblin/eh-server-test yarn launch-tests --coverage
 after_success:
   - docker build -t agamblin/eh-client ./client
   - docker build -t agamblin/eh-server ./server
