updated travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,14 +40,5 @@ deploy:
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     on:
-      branch: develop
-  - provider: elasticbeanstalk
-    region: 'eu-west-3'
-    app: 'eh'
-    env: 'eh-production'
-    bucket_name: 'elasticbeanstalk-eu-west-3-537685808258'
-    bucket_path: 'eh-production'
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
-    on:
-      branch: master
+      all_branches: true
+      condition: $TRAVIS_BRANCH =~ ^(master|develop)$
