conditional travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ deploy:
   - provider: elasticbeanstalk
     region: 'eu-west-3'
     app: 'eh'
-    env: 'eh-staging'
-    bucket_name: 'elasticbeanstalk-eu-west-3-537685808258'
-    bucket_path: 'eh-staging'
+    env: $AWS_EB_ENV
+    bucket_name: $AWS_ENV_BUCKET_NAME
+    bucket_path: $AWS_EB_ENV
     access_key_id: $AWS_ACCESS_KEY
     secret_access_key: $AWS_SECRET_KEY
     on:
