refacto(deployment): connected CI script to GC

--- a/deployment/k8s/server-deployment.yaml
+++ b/deployment/k8s/server-deployment.yaml
@@ -15,7 +15,6 @@ spec:
       containers:
         - name: server
           image: agamblin/eh-server
-          imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 5000
           env:
@@ -24,16 +23,25 @@ spec:
             - name: NODE_ENV
               value: development
             - name: SQL_HOST
-              value: mysql-cluster-ip-service
+              valueFrom:
+                secretKeyRef:
+                  name: eh-secrets
+                  key: SQL_HOST
             - name: SQL_USER
-              value: root
+              valueFrom:
+                secretKeyRef:
+                  name: eh-secrets
+                  key: SQL_USER
             - name: SQL_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: eh-secrets
                   key: SQL_PASSWORD
             - name: SQL_DB
-              value: eh
+              valueFrom:
+                secretKeyRef:
+                  name: eh-secrets
+                  key: SQL_DB
             - name: SQL_PORT
               value: '3306'
             - name: JWT_SECRET
@@ -60,5 +68,3 @@ spec:
                 secretKeyRef:
                   name: eh-secrets
                   key: AWS_SECRET_KEY
-            - name: KUBERNETES
-              value: 'true'
