--- a/deployment/k8s/server-deployment.yaml
+++ b/deployment/k8s/server-deployment.yaml
@@ -55,7 +55,7 @@ spec:
               valueFrom:
                 secretKeyRef:
                   name: eh-secrets
-                  key: BO_PASSWORD
+                  key: BO_ADMIN_PWD
             - name: AWS_BUCKET_NAME
               value: esport-hatcher
             - name: AWS_ACCESS_KEY
