--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - openssl aes-256-cbc -K $encrypted_af7d608d515d_key -iv $encrypted_af7d608d515d_iv -in deployment/eh-gc-credentials.json.enc -out deployment/eh-gc-credentials.json -d
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
-  - git submodule foreach --recursive git checkout $BRANCH
+  - git submodule foreach --recursive git checkout $TRAVIS_BRANCH
   - docker build -t agamblin/eh-client-test -f ./client/Dockerfile.dev ./client
   - docker build -t agamblin/eh-server-test -f ./server/Dockerfile.dev ./server
   - mysql -e 'CREATE DATABASE eh_testing;'
