fix(server-deployment): modified NODE_ENV variable

--- a/deployment/k8s/server-deployment.yaml
+++ b/deployment/k8s/server-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - name: PORT_API
               value: '5000'
             - name: NODE_ENV
-              value: development
+              value: production
             - name: SQL_HOST
               valueFrom:
                 secretKeyRef:
