--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ git:
 before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
-  - git submodule foreach --recursive git checkout $TRAVIS_BRANCH
+  - git submodule foreach --recursive git pull
+  - git submodule foreach --recursive git checkout master
   - docker build -t agamblin/eh-client-test -f ./client/Dockerfile.dev ./client
   - docker build -t agamblin/eh-server-test -f ./server/Dockerfile.dev ./server
   - mysql -e 'CREATE DATABASE eh_testing;'
