--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.2'
+version: "3.2"
 services:
   mysql:
-    image: 'mysql:5.7'
+    image: "mysql:5.7"
     command: --default-authentication-plugin=mysql_native_password
     restart: always
     ports:
-      - '33061:3306'
+      - "33061:3306"
     environment:
       MYSQL_ROOT_PASSWORD: 9uOxHyH9
     entrypoint: sh -c "
@@ -17,7 +17,7 @@ services:
       context: ./nginx
       dockerfile: Dockerfile.dev
     ports:
-      - '8081:80'
+      - "80:80"
   api:
     build:
       context: ./server
@@ -27,7 +27,7 @@ services:
     volumes:
       - ./server:/app:delegated
     ports:
-      - '8080:8080'
+      - "8080:8080"
     environment:
       - NODE_ENV=development
       - SQL_HOST=mysql
@@ -45,7 +45,7 @@ services:
       context: ./client
       dockerfile: Dockerfile.dev
     ports:
-      - '3000:3000'
+      - "3000:3000"
     volumes:
       - ./client:/app:delegated
       - /app/node_modules/node-sass/
